--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Character Creator — CSS for JavaScript Developers</title>
   </head>
   <body>
+    <div class="backdrop"></div>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
